--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator 2025</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 
     <header class="header">
         <div class="header-container">
-            Quote Generator
+            <h1 class="title"> Quote Generator</h1>
         </div>
     </header>
 
     <main>
         <div class="container">
-             <p id></p>
-             <button></button>
+             <p id="quotes"> </p>
+             <button>Generate</button>
         </div>
     </main>
     
+    <script href="scripts/app.js"></script>
 </body>
 </html>
