--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
     <main>
         <div class="container">
-             <p id="quotes"> </p>
-             <button>Generate</button>
+             <p id="quotes">Motivation</p>
+             <p id="author">Author</p>
+             <button id="button">Generate</button>
         </div>
     </main>
     
-    <script href="scripts/app.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
