--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
 
     <main>
         <div class="container">
-             <p id="quotes">Motivation</p>
-             <p id="author">Author</p>
-             <button id="button">Generate</button>
+             <p id="quotes" class="quote-content">Motivation</p>
+             <p id="author" class="quote-content">Author</p>
+            </div>
+            
+            <div class="button-container">
+            <button id="button">Generate</button>
         </div>
     </main>
     
