--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
             <button id="button">Generate</button>
         </div>
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <p class="footer-creator">Crafted by  Alen Villaluz</p>
+        </div>
+    </footer>
     
     <script src="scripts/app.js"></script>
 </body>
